--- a/Desafio_do_curso.ipynb
+++ b/Desafio_do_curso.ipynb
@@ -263,7 +263,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "np.min(norma)"
+      ],
       "metadata": {
         "id": "QIOTN9cOEs-V"
       },
@@ -281,7 +283,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "coef_angulares[norma == np.min(norma)]"
+      ],
       "metadata": {
         "id": "b2PIjDBfExLd"
       },
